--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.5.0",
     "bootstrap": "^5.3.1",
     "dotenv": "^16.3.1",
+    "firebase": "^10.3.1",
     "formik": "^2.4.4",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
