--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,12 +16,16 @@
     "dotenv": "^16.3.1",
     "firebase": "^10.3.1",
     "formik": "^2.4.4",
+    "html2canvas": "^1.4.1",
     "react": "^18.2.0",
+    "react-barcode": "^1.4.6",
     "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
     "react-router-bootstrap": "^0.26.2",
     "react-router-dom": "^6.15.0",
+    "react-spinners": "^0.13.8",
     "sweetalert2": "^11.7.27",
+    "uuid": "^9.0.0",
     "yup": "^1.2.0"
   },
   "devDependencies": {
