--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "firebase": "^10.3.1",
     "formik": "^2.4.4",
     "html2canvas": "^1.4.1",
+    "python-shell": "^5.0.0",
     "react": "^18.2.0",
     "react-barcode": "^1.4.6",
     "react-bootstrap": "^2.8.0",
@@ -25,6 +26,7 @@
     "react-router-dom": "^6.15.0",
     "react-spinners": "^0.13.8",
     "sweetalert2": "^11.7.27",
+    "util": "^0.12.5",
     "uuid": "^9.0.0",
     "yup": "^1.2.0"
   },
