--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "firebase": "^10.3.1",
     "formik": "^2.4.4",
     "html2canvas": "^1.4.1",
+    "jquery": "^3.7.1",
     "python-shell": "^5.0.0",
     "react": "^18.2.0",
     "react-barcode": "^1.4.6",
