--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "react-dom": "^18.2.0",
     "react-router-bootstrap": "^0.26.2",
     "react-router-dom": "^6.15.0",
+    "react-select": "^5.7.4",
     "react-spinners": "^0.13.8",
     "recharts": "^2.8.0",
     "sweetalert2": "^11.7.27",
