--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,8 +27,10 @@
     "react-router-dom": "^6.15.0",
     "react-select": "^5.7.4",
     "react-spinners": "^0.13.8",
+    "react-tooltip": "^5.21.5",
     "recharts": "^2.8.0",
     "sweetalert2": "^11.7.27",
+    "swiper": "^10.3.1",
     "util": "^0.12.5",
     "uuid": "^9.0.0",
     "yup": "^1.2.0"
