--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "formik": "^2.4.4",
     "html2canvas": "^1.4.1",
     "jquery": "^3.7.1",
+    "jspdf": "^2.5.1",
     "python-shell": "^5.0.0",
     "react": "^18.2.0",
     "react-barcode": "^1.4.6",
